$Id$

****************************** DRUPAL 5 BRANCH ********************************

January 16, 2009
----------------
#351395 by elfur: Added missing t() around link to top.
#338722 by catch: Fixed bug in mark topics as read.
NOISSUE by Michelle: Removed unneeded js file.
#347818 by xsphere: Fixed typo that caused error when replying to commment.

January 8, 2009
---------------
#356239 by Michelle: Fixed broken preprocess system left over from AP conversion.
NOISSUE by Michelle: Mass copy to make sure cvs is in sync with my dev copy.

December 30, 2008
-----------------
#343853 by Michelle: Ripped out author pane code and made AF dependent on the author pane module.

December 12, 2008 -- ALPHA 16
-----------------
#330000 and #328800 by Michelle: Redid image handling to ensure all images have alt text. Also made it possible for link images to be picked up automatically if they have a file name that matches the link key.
#344697 by Michelle: Added permission to view statistics and also broke out statistics into its own template.

December 11, 2008
-----------------
NOISSUE by Michelle: Fixed up author pane template comments and added facebook_status variable.
#343848 by Michelle: Added variable for fasttoggle to author pane.

December 8, 2008
-----------------
#320635 by Michelle: Added logic to 'treat as forum post' to account for reply pages. CSS is now loaded whenever AF determines the content is to be treated as a forum post.
#320635 by Michelle: Improvements on theming reply pages, including using a seperate template for previews.
#340149 by mverdier, Michelle: Fixed 'open_basedir restriction' error that occurs when using Zen on D5 without using a subtheme.
#338268 by marcingy: Added option to set length of abbreviated topic title on forum overview.
#338268 by Michelle: Added option to set 'time ago' cutoff.
#303563 by Michelle: Clear readpath when marking read. (Outside module integration.)