@@ -278,3 +278,46 @@ ul.forum-links {
   padding: 0px 5px;  
   margin-left: 150px;
 }
+
+/*** ICONS LEGEND ************************************************************/
+.forum-topic-legend dd {
+  margin-right: 15px;
+  padding-bottom: 4px;
+}
+
+.forum-topic-legend, 
+.forum-topic-legend dd {
+  margin: 5px;
+  padding: 0;
+}
+
+.forum-smalltext {
+  font-size: 11px;
+}
+
+.forum-topic-legend img {
+  margin-right: 4px;
+  vertical-align: bottom;
+}
+
+.forum-float-left {
+  float: left;
+}
+
+.forum-folder-legend, 
+.forum-folder-legend dl, 
+.forum-folder-legend dd {
+  margin: 5px 0 0 0;
+  padding: 0;
+}
+
+.forum-folder-legend dl, 
+.forum-folder-legend dd {
+  float: left;
+  margin-right: 10px;
+}
+
+.forum-folder-legend img {
+  padding-bottom: 4px;
+  vertical-align: middle;
+}
