@@ -77,8 +77,6 @@ ul.forum-links {
   padding-top: 5px;
 }
 #forum .container .description {
-  font-size: .8em;
-  font-weight: normal;
   margin: 0;
   padding: 3px 0 0 0;
 }
@@ -260,4 +258,47 @@ ul.forum-links {
   text-align: right;
   padding: 0px 5px;  
   margin-left: 150px;
+}
+
+/*** ICONS LEGEND ************************************************************/
+.forum-topic-legend dd {
+  margin-right: 15px;
+  padding-bottom: 4px;
+}
+
+.forum-topic-legend, 
+.forum-topic-legend dd {
+  margin: 5px;
+  padding: 0;
+}
+
+.forum-smalltext {
+  font-size: 11px;
+}
+
+.forum-topic-legend img {
+  margin-right: 4px;
+  vertical-align: bottom;
+}
+
+.forum-float-left {
+  float: left;
+}
+
+.forum-folder-legend, 
+.forum-folder-legend dl, 
+.forum-folder-legend dd {
+  margin: 5px 0 0 0;
+  padding: 0;
+}
+
+.forum-folder-legend dl, 
+.forum-folder-legend dd {
+  float: left;
+  margin-right: 10px;
+}
+
+.forum-folder-legend img {
+  padding-bottom: 4px;
+  vertical-align: middle;
 }
