@@ -106,3 +106,7 @@
 <?php if (!empty($forum_statistics)): ?>
   <?php print $forum_statistics; ?>
 <?php endif; ?>
+
+<?php if (!empty($forum_legend)): ?>
+  <?php print $forum_legend; ?>
+<?php endif; ?>
